--- a/src/style.scss
+++ b/src/style.scss
@@ -25,10 +25,9 @@ body,
 body {
   background: #090e01;
   color: black;
-  line-height: 20px;
-  font-size: 12px;
+  line-height: 25px;
+  font-size: 11px;
   letter-spacing: 1px;
-  word-spacing: 0.5px;
   overscroll-behavior: none;
   font-family: "Press Start 2P";
 }
@@ -54,9 +53,9 @@ body {
   top: 0;
   left: 0;
   margin: 20px;
-  font-size: 10px;
+  font-size: 8px;
   pointer-events: none;
-  color: white;
+  color: rgba(255, 255, 255, 0.781);
 }
 
 #card {
@@ -73,7 +72,7 @@ body {
     position: relative;
     background-color: white;
     border-radius: 3em;
-    padding: 1em 2em;
+    padding: 1em 2.5em;
     cursor: pointer;
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
@@ -81,6 +80,7 @@ body {
     -webkit-box-shadow: 0 0 0 0 black;
     box-shadow: 0 0 0 0 black;
     font-family: "Press Start 2P";
+    font-size: 11px;
     &:hover {
       -webkit-transform: translateY(-4px) translateX(-2px);
       -ms-transform: translateY(-4px) translateX(-2px);
@@ -100,8 +100,8 @@ body {
 .subheaders {
   background-color: rgba(255, 255, 255, 0.848);
   height: fit-content;
-  width: 10vw;
-  min-width: 200px;
+  width: 11vw;
+  min-width: 210px;
   padding: 20px;
   border-radius: 20px;
   @include shadow(#d96846);
@@ -123,7 +123,7 @@ body {
   height: fit-content;
   left: 0;
   top: 12vh;
-  transform: translateX(-340px);
+  transform: translateX(-330px);
   transition: transform 0.33s ease-out;
   z-index: 1;
   cursor: pointer;
@@ -131,7 +131,7 @@ body {
   width: fit-content;
   max-width: 300px;
   padding: 25px;
-  border-radius: 0 10% 5% 0;
+  border-radius: 0 5% 5% 0;
   border-left: 0;
   @include shadow(#d96846);
   .item-list {
@@ -145,14 +145,14 @@ body {
   }
 }
 .is-active {
-  transform: translateX(0);
+  transform: translateX(-1px);
 }
 
 .toggle-button {
   position: absolute;
-  top: 8vh;
-  z-index: 1;
-  transform: translateX(10px);
+  top: 10vh;
+  z-index: 2;
+  transform: translateX(3px);
   transition: transform 0.33s ease-out;
   padding: 5px;
   background-color: #ffffff;
@@ -166,7 +166,7 @@ body {
   }
 }
 .toggle-active {
-  transform: translateX(360px);
+  transform: translateX(330px);
 }
 
 @-webkit-keyframes slide-in-left {
@@ -176,9 +176,9 @@ body {
     transform: translateX(0);
   }
   100% {
-    -webkit-transform: translateX(-100px);
+    -webkit-transform: translateX(-20px);
     opacity: 1;
-    transform: translateX(-100px);
+    transform: translateX(-20px);
   }
 }
 @keyframes slide-in-left {
@@ -188,16 +188,16 @@ body {
     transform: translateX(0);
   }
   100% {
-    -webkit-transform: translateX(-100px);
+    -webkit-transform: translateX(-20px);
     opacity: 1;
-    transform: translateX(-100px);
+    transform: translateX(-20px);
   }
 }
 
 @-webkit-keyframes slide-out-left {
   0% {
-    -webkit-transform: translateX(-100px);
-    transform: translateX(-100px);
+    -webkit-transform: translateX(-20px);
+    transform: translateX(-20px);
   }
   100% {
     -webkit-transform: translateX(0);
@@ -207,9 +207,9 @@ body {
 }
 @keyframes slide-out-left {
   0% {
-    -webkit-transform: translateX(-100px);
+    -webkit-transform: translateX(-20px);
     opacity: 1;
-    transform: translateX(-100px);
+    transform: translateX(-20px);
   }
   100% {
     -webkit-transform: translateX(0);
