--- a/src/style.scss
+++ b/src/style.scss
@@ -123,50 +123,50 @@ body {
   height: fit-content;
   left: 0;
   top: 12vh;
-  transform: translateX(-330px);
-  transition: transform 0.33s ease-out;
+  transform: translateX(-290px);
+  transition: transform 0.35s ease-out;
   z-index: 1;
   cursor: pointer;
-  min-height: 30vh;
   width: fit-content;
-  max-width: 300px;
-  padding: 25px;
+  max-width: 270px;
+  padding: 20px;
   border-radius: 0 5% 5% 0;
+  font-size: 0.8em;
   border-left: 0;
   @include shadow(#d96846);
   .item-list {
     display: grid;
-    grid-template-columns: repeat(3, 100px);
+    grid-template-columns: repeat(3, 80px);
     grid-template-rows: repeat(3, auto);
     img {
       width: 4vw;
-      min-width: 70px;
+      max-width: 70px;
     }
   }
 }
 .is-active {
-  transform: translateX(-1px);
+  transform: translateX(0px);
 }
 
 .toggle-button {
   position: absolute;
   top: 10vh;
   z-index: 2;
-  transform: translateX(3px);
-  transition: transform 0.33s ease-out;
+  transform: translateX(0px);
+  transition: transform 0.35s ease-out;
   padding: 5px;
   background-color: #ffffff;
   border-radius: 50%;
+  width: 30px;
+  height: 30px;
   @include shadow(#d96846);
   cursor: pointer;
   img {
-    width: 2vw;
-    min-width: 30px;
-    max-width: 50px;
+    width: 30px;
   }
 }
 .toggle-active {
-  transform: translateX(330px);
+  transform: translateX(290px);
 }
 
 @-webkit-keyframes slide-in-left {
