--- a/src/style.scss
+++ b/src/style.scss
@@ -60,7 +60,7 @@ body,
 }
 
 body {
-  background: linear-gradient(
+  background-image: linear-gradient(
     180deg,
     hsl(63deg 22% 53%) 0%,
     hsl(62deg 23% 58%) 12%,
