--- a/src/style.scss
+++ b/src/style.scss
@@ -60,7 +60,21 @@ body,
 }
 
 body {
-  background-image: linear-gradient(
+  background: linear-gradient(
+    180deg,
+    hsl(63deg 22% 53%) 0%,
+    hsl(62deg 23% 58%) 12%,
+    hsl(60deg 24% 63%) 31%,
+    hsl(58deg 26% 68%) 65%,
+    hsl(57deg 30% 73%) 78%,
+    hsl(55deg 34% 78%) 85%,
+    hsl(55deg 34% 82%) 89%,
+    hsl(54deg 35% 87%) 93%,
+    hsl(54deg 35% 91%) 96%,
+    hsl(53deg 36% 96%) 98%,
+    hsl(0, 0%, 100%) 100%
+  );
+  background: -webkit-linear-gradient(
     180deg,
     hsl(63deg 22% 53%) 0%,
     hsl(62deg 23% 58%) 12%,
