--- a/src/style.scss
+++ b/src/style.scss
@@ -60,21 +60,7 @@ body,
 }
 
 body {
-  background: linear-gradient(
-    180deg,
-    hsl(63deg 22% 53%) 0%,
-    hsl(62deg 23% 58%) 12%,
-    hsl(60deg 24% 63%) 31%,
-    hsl(58deg 26% 68%) 65%,
-    hsl(57deg 30% 73%) 78%,
-    hsl(55deg 34% 78%) 85%,
-    hsl(55deg 34% 82%) 89%,
-    hsl(54deg 35% 87%) 93%,
-    hsl(54deg 35% 91%) 96%,
-    hsl(53deg 36% 96%) 98%,
-    hsl(0, 0%, 100%) 100%
-  );
-  background: -webkit-linear-gradient(
+  background-image: linear-gradient(
     180deg,
     hsl(63deg 22% 53%) 0%,
     hsl(62deg 23% 58%) 12%,
@@ -162,11 +148,9 @@ body {
       font-weight: 600;
     }
     -webkit-transform: translateY(-4px) translateX(-2px);
-    -ms-transform: translateY(-4px) translateX(-2px);
     transform: translateY(-4px) translateX(-2px);
     &:active {
       -webkit-transform: translateY(2px) translateX(1px);
-      -ms-transform: translateY(2px) translateX(1px);
       transform: translateY(2px) translateX(1px);
       -webkit-box-shadow: 0 0 0 0 $color-palette-2;
       box-shadow: 0 0 0 0 $color-palette-2;
