--- a/src/style.scss
+++ b/src/style.scss
@@ -62,31 +62,31 @@ body,
 body {
   background: -webkit-linear-gradient(
     180deg,
-    hsl(63deg 22% 53%) 0%,
-    hsl(62deg 23% 58%) 12%,
-    hsl(60deg 24% 63%) 31%,
-    hsl(58deg 26% 68%) 65%,
-    hsl(57deg 30% 73%) 78%,
-    hsl(55deg 34% 78%) 85%,
-    hsl(55deg 34% 82%) 89%,
-    hsl(54deg 35% 87%) 93%,
-    hsl(54deg 35% 91%) 96%,
-    hsl(53deg 36% 96%) 98%,
-    hsl(0, 0%, 100%) 100%
+    #a1a36e 0%,
+    #abad7b 12%,
+    #b7b78a 31%,
+    #c3c198 65%,
+    #cfcda5 78%,
+    #dad7b4 85%,
+    #e0ddc2 89%,
+    #e9e7d2 93%,
+    #f0eee0 96%,
+    #f8f8f1 98%,
+    #ffffff 100%
   );
   background: linear-gradient(
     180deg,
-    hsl(63deg 22% 53%) 0%,
-    hsl(62deg 23% 58%) 12%,
-    hsl(60deg 24% 63%) 31%,
-    hsl(58deg 26% 68%) 65%,
-    hsl(57deg 30% 73%) 78%,
-    hsl(55deg 34% 78%) 85%,
-    hsl(55deg 34% 82%) 89%,
-    hsl(54deg 35% 87%) 93%,
-    hsl(54deg 35% 91%) 96%,
-    hsl(53deg 36% 96%) 98%,
-    hsl(0, 0%, 100%) 100%
+    #a1a36e 0%,
+    #abad7b 12%,
+    #b7b78a 31%,
+    #c3c198 65%,
+    #cfcda5 78%,
+    #dad7b4 85%,
+    #e0ddc2 89%,
+    #e9e7d2 93%,
+    #f0eee0 96%,
+    #f8f8f1 98%,
+    #ffffff 100%
   );
   color: $text-color;
   font-size: 15px;
