--- a/src/style.scss
+++ b/src/style.scss
@@ -125,7 +125,7 @@ canvas {
   left: 0;
   z-index: 1;
   pointer-events: none;
-  color: $color-palette-2;
+  color: white;
   @media only screen and (max-width: 900px) {
     font-size: 0.5em;
     margin: 3px 7px;
