--- a/src/style.scss
+++ b/src/style.scss
@@ -75,32 +75,6 @@ body {
 canvas {
   width: 100%;
   height: 100%;
-  background: -webkit-linear-gradient(
-    180deg,
-    hsl(86deg 41% 71%) 0%,
-    hsl(75deg 40% 71%) 21%,
-    hsl(66deg 38% 71%) 30%,
-    hsl(57deg 39% 73%) 39%,
-    hsl(49deg 44% 75%) 46%,
-    hsl(43deg 48% 77%) 54%,
-    hsl(38deg 52% 79%) 61%,
-    hsl(34deg 54% 80%) 69%,
-    hsl(30deg 54% 82%) 79%,
-    hsl(26deg 52% 84%) 100%
-  );
-  background: linear-gradient(
-    180deg,
-    hsl(86deg 41% 71%) 0%,
-    hsl(75deg 40% 71%) 21%,
-    hsl(66deg 38% 71%) 30%,
-    hsl(57deg 39% 73%) 39%,
-    hsl(49deg 44% 75%) 46%,
-    hsl(43deg 48% 77%) 54%,
-    hsl(38deg 52% 79%) 61%,
-    hsl(34deg 54% 80%) 69%,
-    hsl(30deg 54% 82%) 79%,
-    hsl(26deg 52% 84%) 100%
-  );
 }
 ::selection {
   background: $color-palette-2;
@@ -111,12 +85,13 @@ canvas {
 }
 
 ::-webkit-scrollbar-track {
-  background: hsl(26deg 52% 84%);
+  background: white;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: white;
-  border: 5px solid hsl(26deg 52% 84%);
+  background-color: $color-palette-2;
+  border-radius: 10px;
+  border: 4px solid white;
 }
 
 .Overlay {
@@ -289,6 +264,100 @@ canvas {
   }
   @media only screen and (min-width: 1200px) {
     transform: translateX(220px);
+  }
+}
+
+// background color
+.background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  display: grid;
+  margin: 50px;
+  place-items: center;
+  .main {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    transition: 0.4s ease-in-out;
+    position: absolute;
+    border: white 2px solid;
+    border-radius: 4px;
+  }
+  #bg1 {
+    background: linear-gradient(
+      180deg,
+      hsl(216deg 27% 61%) 0%,
+      hsl(208deg 33% 62%) 21%,
+      hsl(201deg 38% 63%) 30%,
+      hsl(195deg 41% 65%) 39%,
+      hsl(189deg 41% 66%) 46%,
+      hsl(182deg 39% 67%) 54%,
+      hsl(174deg 41% 71%) 61%,
+      hsl(163deg 44% 75%) 69%,
+      hsl(149deg 47% 80%) 79%,
+      hsl(128deg 49% 85%) 100%
+    );
+    transform: translateX(-60px) rotate(-45deg);
+    &:hover {
+      transform: translateX(-70px) rotate(-20deg);
+    }
+  }
+
+  #bg2 {
+    background: linear-gradient(
+      180deg,
+      hsl(86deg 41% 71%) 0%,
+      hsl(75deg 40% 71%) 21%,
+      hsl(66deg 38% 71%) 30%,
+      hsl(57deg 39% 73%) 39%,
+      hsl(49deg 44% 75%) 46%,
+      hsl(43deg 48% 77%) 54%,
+      hsl(38deg 52% 79%) 61%,
+      hsl(34deg 54% 80%) 69%,
+      hsl(30deg 54% 82%) 79%,
+      hsl(26deg 52% 84%) 100%
+    );
+    transform: translateX(-40px) rotate(-45deg);
+    &:hover {
+      transform: translateX(-50px) rotate(-20deg);
+    }
+  }
+  #bg3 {
+    background: linear-gradient(
+      180deg,
+      #7289ac 0%,
+      hsl(234deg 21% 62%) 9%,
+      hsl(263deg 19% 65%) 22%,
+      hsl(296deg 17% 67%) 40%,
+      hsl(325deg 25% 71%) 58%,
+      hsl(342deg 35% 76%) 72%,
+      hsl(356deg 44% 81%) 82%,
+      hsl(9deg 55% 83%) 90%,
+      hsl(18deg 65% 85%) 96%,
+      #f6dbc6 100%
+    );
+    transform: translateX(-20px) rotate(-45deg);
+    &:hover {
+      transform: translateX(-30px) rotate(-20deg);
+    }
+  }
+  #bg4 {
+    background: linear-gradient(
+      180deg,
+      #62799d 0%,
+      hsl(218deg 23% 56%) 24%,
+      hsl(219deg 23% 61%) 38%,
+      hsl(219deg 23% 67%) 49%,
+      hsl(220deg 23% 72%) 59%,
+      hsl(220deg 23% 77%) 68%,
+      hsl(221deg 23% 83%) 76%,
+      hsl(221deg 23% 89%) 85%,
+      hsl(221deg 23% 94%) 92%,
+      hsl(0deg 0% 100%) 100%
+    );
+    transform: rotate(-45deg);
   }
 }
 
